--- a/Deji/App.config
+++ b/Deji/App.config
@@ -3,10 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Deji.Properties.Settings.DB_DejConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DB_Dej.mdf;Integrated Security=True"
+        <add name="Deji.Properties.Settings.DB_DejConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Data\DB_Dej.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
 </configuration>
