--- a/Deji/Deji.csproj
+++ b/Deji/Deji.csproj
@@ -65,22 +65,24 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
+    <ApplicationDefinition Include="Data\App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Source\RecordElement.cs" />
+    <Compile Include="Source\UnitsElement.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="App.xaml.cs">
+    <Compile Include="Data\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="DB_DejDataSet.cs">
+    <Compile Include="Data\DB_DejDataSet.cs">
       <DependentUpon>DB_DejDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="DB_DejDataSet.Designer.cs">
+    <Compile Include="Data\DB_DejDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DB_DejDataSet.xsd</DependentUpon>
@@ -108,15 +110,16 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="DB_DejDataSet.xsc">
+    <None Include="app.config" />
+    <None Include="Data\DB_DejDataSet.xsc">
       <DependentUpon>DB_DejDataSet.xsd</DependentUpon>
     </None>
-    <None Include="DB_DejDataSet.xsd">
+    <None Include="Data\DB_DejDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>DB_DejDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="DB_DejDataSet.xss">
+    <None Include="Data\DB_DejDataSet.xss">
       <DependentUpon>DB_DejDataSet.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
@@ -125,13 +128,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="Data\App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DB_Dej.mdf">
+    <Content Include="Data\DB_Dej.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="DB_Dej_log.ldf">
+    <Content Include="Data\DB_Dej_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>DB_Dej.mdf</DependentUpon>
     </Content>
@@ -148,5 +151,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
