--- a/ArmyProjects/Увольнения/Увольнения.csproj
+++ b/ArmyProjects/Увольнения/Увольнения.csproj
@@ -54,6 +54,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Source\UvalTable.cs" />
+    <Compile Include="Source\UvalTableElement.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
