--- a/ArmyProjects/Увольнения/Увольнения.csproj
+++ b/ArmyProjects/Увольнения/Увольнения.csproj
@@ -54,8 +54,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Source\UvalTable.cs" />
     <Compile Include="Source\UvalTableElement.cs" />
+    <Compile Include="Source\UvalTableElementRow.cs" />
+    <Compile Include="Source\UvalTableGUI.cs" />
+    <Compile Include="Source\UvalTableElementGUI.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
