--- a/ArmyProjects/Увольнения2/Увольнения2.csproj
+++ b/ArmyProjects/Увольнения2/Увольнения2.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Source\BadBoy.cs" />
     <Compile Include="Source\DataMan.cs" />
     <Compile Include="Source\Fizo.cs" />
+    <Compile Include="Source\GUIEventHandler.cs" />
     <Compile Include="Source\GUIUvalSubTable.cs" />
     <Compile Include="Source\GUIUvalTable.cs" />
     <Compile Include="Source\SQLConnector.cs" />
