--- a/ArmyProjects/Uval3/Uval3.csproj
+++ b/ArmyProjects/Uval3/Uval3.csproj
@@ -80,6 +80,18 @@
     <Compile Include="Source\Periods.cs" />
     <Compile Include="Source\Records.cs" />
     <Compile Include="Source\SQLConnector.cs" />
+    <Compile Include="Windows\WindowManDelete.xaml.cs">
+      <DependentUpon>WindowManDelete.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\WindowManEdit.xaml.cs">
+      <DependentUpon>WindowManEdit.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\WindowPeriodEdit.xaml.cs">
+      <DependentUpon>WindowPeriodEdit.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\WindowPeriodDelete.xaml.cs">
+      <DependentUpon>WindowPeriodDelete.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -92,6 +104,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\WindowManDelete.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\WindowManEdit.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\WindowPeriodEdit.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\WindowPeriodDelete.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
