--- a/ArmyProjects/Uval3/Uval3.csproj
+++ b/ArmyProjects/Uval3/Uval3.csproj
@@ -36,6 +36,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
@@ -77,6 +80,7 @@
     <Compile Include="Source\DataMan.cs" />
     <Compile Include="Source\GUIEventHandler.cs" />
     <Compile Include="Source\GUIUvalTable.cs" />
+    <Compile Include="Source\MNGRBackup.cs" />
     <Compile Include="Source\Periods.cs" />
     <Compile Include="Source\Records.cs" />
     <Compile Include="Source\SQLConnector.cs" />
@@ -147,6 +151,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.108.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.108.0\build\net40\System.Data.SQLite.Core.targets')" />
